# jlog

./: LICENSE  README.md  pyproject.toml
jlog/: __init__.py  __init__.pyi  _consts.py  auxiliary.py  auxiliary.pyi  gradient.py  gradient.pyi  info.py  logger.py  logger.pyi
